--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ header {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  width: 100%;
 }
 
 .header_nav {
