--- a/scss/style.scss
+++ b/scss/style.scss
@@ -54,6 +54,7 @@ header{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
 }
 .header_nav{
     display: flex;
